:art: Rename variables

--- a/CrankNicholson.ipynb
+++ b/CrankNicholson.ipynb
@@ -369,8 +369,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\n",
-    "    'cycles.txt',\n",
+    "potential_df = pd.read_csv(\n",
+    "    'cycles.potential.txt',\n",
     ")\n",
     "mixed_df = pd.read_csv(\n",
     "    'cycles.mixed.txt',\n",
